<resources>
    <string name="app_name">QuadB</string>
    <string name="pro">Pro</string>
    <string name="pizza">Pizza</string>
    <string name="burger">Burger</string>
    <string name="cake">Cake</string>
    <string name="healthy">Healthy</string>
    <string name="sandwich">Sandwich</string>
    <string name="chinese">Chinese</string>
    <string name="chaat">Chaat</string>
    <string name="fries">Fries</string>
    <string name="food_category">Eat what makes you happy</string>
    <string name="location">Rawalpada, Dahisar East</string>
    <string name="search">Restaurant name, cuisine, or a dish...</string>
    <string name="order">Order</string>
    <string name="go_out">Go Out</string>
    <string name="nutrition">Nutrition</string>
    <string name="donate">Donate</string>
    <string name="rating">Rating 4.0+</string>
    <string name="max_safety">MAX Safety</string>
    <string name="see_more">see more</string>

    <string-array name="cuisines">
        <item>Afghan</item>
        <item>Asian</item>
        <item>BBQ</item>
        <item>Chinese</item>
        <item>Desserts</item>
        <item>French</item>
        <item>Gujarati</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Mexicon</item>
    </string-array>
</resources>