<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemIconTint="@drawable/navigation_background"
        app:itemTextColor="@drawable/navigation_background"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_menu" />

    <EditText
        android:id="@+id/et_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:text="@string/location"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_round"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:hint="@string/search"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/et_location"
        app:layout_constraintTop_toBottomOf="@+id/et_location" />

    <!--    <ScrollView-->
    <!--        android:id="@+id/scrollable"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/et_search"-->
    <!--        app:layout_constraintStart_toStartOf="parent">-->

    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search">

        <TextView
            android:id="@+id/tv_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_round_text"
            android:padding="8dp"
            android:text="@string/pro"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/s_cuisine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_round_text"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/tv_pro"
            app:layout_constraintTop_toTopOf="@+id/tv_pro" />


        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_round_text"
            android:padding="8dp"
            android:text="@string/rating"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/safety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/shape_round_text"
            android:padding="8dp"
            android:text="@string/max_safety"
            android:textAlignment="center"
            android:layout_marginEnd="16dp"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title">

        <ImageView
            android:id="@+id/offer_paytm"
            android:layout_width="180dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/offer_paytm" />

        <ImageView
            android:id="@+id/offer_paypal"
            android:layout_width="180dp"
            android:layout_height="190dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/offer_paypal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/food_category"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_offer" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_pizza"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/pizza" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_burger"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/burger" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_healthy"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/healthy" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_sandwich"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/sandwich" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="31dp"
            android:text="@string/pizza"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_sandwich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:text="@string/sandwich"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_healthy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="50dp"
            android:layout_toStartOf="@+id/tv_sandwich"
            android:text="@string/healthy"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_burger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="62dp"
            android:layout_toStartOf="@+id/tv_healthy"
            android:text="@string/burger"
            android:textAlignment="center" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_cake"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/cake" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_chaat"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/chaat" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_chinese"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/chinese" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_fries"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/fries"
            app:layout_constraintTop_toTopOf="@+id/iv_chinese" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/tv_cake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="31dp"
            android:text="@string/cake" />

        <TextView
            android:id="@+id/tv_chaat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="65dp"
            android:layout_toStartOf="@+id/tv_chinese"
            android:text="@string/chaat" />

        <TextView
            android:id="@+id/tv_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="63dp"
            android:layout_toStartOf="@+id/tv_fries"
            android:text="@string/chinese" />

        <TextView
            android:id="@+id/tv_fries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="35dp"
            android:text="@string/fries" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_round_text"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rl_2">

        <TextView
            android:id="@+id/load_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:text="@string/see_more"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>